Site CSS atualizado

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         </section>
    
 
-    <footer>Site criado por Charles Peres</footer>
+    <footer>
+        <p>Site criado por Charles Peres</p>
+    </footer>
         
 </body>
 </html>
